# offline-qr-wallet

./: .gitignore  README.md
backend/: README.md  package-lock.json  package.json  tsconfig.json
backend/src/: bootstrap.ts  index.ts
backend/src/api/: routes.ts  schemas.ts
backend/src/domain/entities/: account.ts  audit.ts  card-transfer.ts  common.ts  device.ts  ledger.ts  risk.ts  transaction.ts  wallet.ts
backend/src/domain/policies/: default-risk-policy.ts
backend/src/domain/repositories/: account-repository.ts  audit-repository.ts  card-transfer-repository.ts  device-repository.ts  ledger-repository.ts  transaction-repository.ts  wallet-repository.ts
backend/src/domain/services/: account-service.ts  audit-service.ts  card-transfer-service.ts  device-provisioning-service.ts  errors.ts  history-service.ts  offline-transaction-sync-service.ts  reconciliation-service.ts  risk-policy-service.ts  signature-verifier.ts  wallet-service.ts
backend/src/infra/crypto/: basic-signature-verifier.ts
backend/tests/: card-transfer.test.ts  offline-sync.test.ts
cpp/stm32-wallet-core/: CMakeLists.txt  README.md
cpp/stm32-wallet-core/examples/: stm32_sim.cpp
cpp/stm32-wallet-core/include/offline_wallet/: interfaces.hpp  models.hpp  offline_engine.hpp
cpp/stm32-wallet-core/src/: offline_engine.cpp
cpp/stm32-wallet-core/tests/: offline_engine_test.cpp
docs/: architecture.md
ios/OfflineQRWallet/: Package.swift
scripts/: generate_app_icon.sh
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: api.ts  main.ts  styles.css
(+29 files in other folders)
